# techno

./: .env.example  .gitattributes  Dockerfile  Makefile  README.md  pyproject.toml
app/: alembic.ini  start.sh
app/application/api/: main.py
app/application/api/v1/: handlers.py
app/core/: config.py
app/infra/postgres/: postgres.py
app/migrations/: env.py
app/migrations/versions/: 1a9782accb5c_add_migrations.py
app/models/: entities.py
docker_compose/: app.yaml  storage.yaml
